--- a/index.css
+++ b/index.css
@@ -194,3 +194,15 @@ input:checked + .slider:before {
     flex-basis: 60px;
     border-radius: 0 6px 6px 0;
 }
+
+.visible {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity .2s linear;
+}
+
+.hidden {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s 1.25s, opacity 1.25s linear;
+}
